--- a/NEO-natal/bin/NEO-natal.dll.config
+++ b/NEO-natal/bin/NEO-natal.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Survey" connectionString="data source=MIKENORRIS-HP;initial catalog=NEO-natal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+    <add name="Survey" connectionString="data source=localhost;initial catalog=NEO-natal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
